[package]
name = "sphinx"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
bytemuck = {version = "1.14.0"}
clap = { version = "4.4.16", features = ["derive"] }
rand = { version = "0.8.5" }
rand_chacha = "0.3.1"
